# My-WebScrapper

./: main.py  pyproject.toml  save.py  scraper.py
csv/: go.csv  html.csv  java.csv  js.csv  python.csv  react.csv
templates/: detail.html  home.html
