[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "day-thirteen-and-fourteen"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
beautifulsoup4 = "^4.9"
python = "^3.8"
requests = "^2.23"
[tool.poetry.dev-dependencies]
